createdthe export and imports into the different modules.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "rpsls",
   "version": "1.0.0",
   "description": "",
-  "main": "AI.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
